--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,12 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Additional stuff (mohammad-yazdani)
+go
+go/
+build
+build/
+.idea
+.idea/
+
